--- a/application.yml
+++ b/application.yml
@@ -43,21 +43,7 @@ workshop:
     -
       title: "Pivotal Web Services"
       url: "https://run.pivotal.io/"
-  requirements:
-    -
-      title: "Test"
-      requirement:
-        -
-          content: "content 1 link"
-        -
-          content: "content 2 link"
-    -
-      title: "CLI"
-      requirement:
-      -
-        content: "content 3 link"
-      -
-        content: "content 4 link"
+  
   sessions:
     - 
       id: "day1"
@@ -66,18 +52,18 @@ workshop:
       topics:
       -
         id: "session1"
-        title: "Cloud Native Enterprise"
+        title: "Cloud Native Enterprise 10:00-11:00"
       -
         id: "pcf101-session1-cne"
       -
         id: "session1lab"
-        title: "Demo: 9:45 AM - 10:15 AM"
+        title: "Demo: 11:00-12:00"
       -
         id: "emptysession"
         title: "Pushing your first app, Apps Manager"
       -
-        id: "day1ambreak"
-        title: "Break 10:15 AM - 10:30 AM"
+        id: "day1Lunch"
+        title: "Lunch 12:00-12:30"
       -
         id: "session2"
         title: "PCF Architecture and Operations"
@@ -86,73 +72,7 @@ workshop:
       -
         id: "pcf101-session2a-oper"
       -
-        id: "day1Lunch"
-        title: "Lunch 12:00 PM - 1:00 PM"
-      -
-        id: "pcf101-session3-services"
-        title: "Pivotal Cloud Foundry Services"
-      -
-        id: "micro"
-        title: "Continous Delivery and Cloud Native Apps"
-      -
-        id: "66-continuous-delivery-ravi"
-      -
-        id: "68-cloud-native-design"
-      -
-        id: "70-microservices"
-      -
-        id: "security"
-        title: "Security"
-      -
-        id: "59-oauth-primer"
-      -
-        id: "60-security-and-sso"
-      -
-        id: "day1pmbreak"
-        title: "Break 3:30 PM - 3:45 PM"
-      -
-        id: "day1open"
-        title: "Open Discussions:"
-      -
-        id: "56-cloud-controller-API"
-      -
-        id: "58-service-broker"
-      -
-        id: "62-buildpacks"
-      -
         id: "emptysession"
-        title: "COTS / ERP / Packaged Software"
-    - 
-      id: "day2"
-      name: "Day 2"
-      description: "Content for September, 9"
-      topics:
-      -
-        id: "session1"
-        title: "Application Development"
-      -
-        id: "04-cli"
-      -
-        id: "08-deploy-simple-app"
-      -
-        id: "06-org-space-user-role"
-      -
-        id: "10-application-manifest"
-      -
-        id: "12-domains-and-routes"
-      -
-        id: "springboot"
-        title: "Spring Boot"
-      -
-        id: "80-cs-spring-boot-basics"
-      -
-        id: "82-cs-spring-boot-adv"
-      -
-        id: "scs"
-        title: "Spring Cloud"
-      -
-        id: "config"
-      -
-        id: "service-discovery"
-      -
-        id: "circuit-breakers"
+        title: "PCF at XLS"
+     
+    
