--- a/application.yml
+++ b/application.yml
@@ -70,15 +70,15 @@ workshop:
       -
         id: "02-intro-to-pcf"
       -
-        id: "04-cli.pdf"
+        id: "04-cli"
       -
-        id: "06-org-space-user-role.pdf"
+        id: "06-org-space-user-role"
       -
-        id: "08-deploy-simple-app.pdf"
+        id: "08-deploy-simple-app"
       -
-        id: "12-domains-and-routes.pdf"
+        id: "12-domains-and-routes"
       -
-        id: "14-services.pdf"
+        id: "14-services"
       -
         id: "session1lab"
         title: "Demo: 11:00-12:00"
